# hirc-duckdb-demo

./: 01.snowflake_setup.sql  02.rbac.sql  README.md  Taskfile.yml  demo.sql  env.example  pyproject.toml  requirements.txt  workbook.ipynb
