[project]
name = "hirc-duckdb-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.0",
    "duckdb>=1.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
]
